# web_inspector_mcp

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_har.py
tests/: conftest.py  test_browser_session.py  test_capture_network.py  test_discover_endpoints.py  test_extract_api_schema.py  test_intercept_api.py  test_measure_performance.py  test_server.py
web_inspector_mcp/: browser_session.py  server.py
web_inspector_mcp/tools/: capture_network.py  discover_endpoints.py  extract_api_schema.py  intercept_api.py  measure_performance.py
